# examples

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
docker.example/: Dockerfile  README.md  app.py
docker.example/templates/: index.html
docs/: hw3-push-pull-merge-erros.md
fib/: Doxyfile  Makefile  README.md  fib.cc  fib.h  fib_cache.cc  fib_cache.h  main.cc
fib/test/: Makefile  test_fib.cc
make.example4/: .gitignore  Makefile
missing_numbers/: README.md
sum_of_squares/: SumOfPerfectSquares-dp-static.py  SumOfPerfectSquares-dp.py  SumOfPerfectSquares-math.py  SumOfPerfectSquares-naive-comb.py  SumOfPerfectSquares-naive.py  SumOfPerfectSquares-recursive-cache.py  SumOfPerfectSquares-recursive.py
tar.example/: README.md
unittesting.examples/cpp/: .gitignore  CMakeLists.txt  README.md
unittesting.examples/cpp-discord/: CMakeLists.txt  README.md  env.template  source.cpp
unittesting.examples/cpp/src/: CMakeLists.txt  main.cc
unittesting.examples/javascript/: README.md  index.html  package-lock.json  package.json
unittesting.examples/javascript/modules/: fib.mjs
unittesting.examples/javascript/test/: test.mjs
unittesting.examples/js/: README.md  index.html  main.js  package-lock.json  package.json
unittesting.examples/js/modules/: fib.js
unittesting.examples/js/test/: test.js  test.mjs  test.web.mjs
unittesting.examples/py/: README.md  fib.py
unittesting.examples/python/: test_fib.py  test_fib_pytest.py
